--- a/SistemaVentas/src/main/java/Cajero/ModificarListaUsuarios.form
+++ b/SistemaVentas/src/main/java/Cajero/ModificarListaUsuarios.form
@@ -74,7 +74,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonModificar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Modificar"/>
+        <Property name="text" type="java.lang.String" value="ergeg"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonModificarActionPerformed"/>
